--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "stripe": "^11.4.0"
+    "stripe": "^11.4.0",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "node server.js"
