--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
@@ -11,8 +12,8 @@
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "stripe": "^11.4.0",
-    "cors": "^2.8.5"
+    "nodemon": "^2.0.20",
+    "stripe": "^11.4.0"
   },
   "scripts": {
     "start": "node server.js"
